<?xml version="1.0" encoding="utf-8"?>

<!-- All views in this activity MUST have an 'L' at the end
 to represent the login activity -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/tViewInstructionsLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginInstructions"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmailL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutEmailL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutPasswordL"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewInstructionsLogin">

        <TextView
            android:id="@+id/tViewEmailL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/tEditEmailL"
            android:padding="10dp"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/tEditEmailL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPasswordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmailL"
        app:layout_constraintWidth_percent="80">

        <LinearLayout
            android:id="@+id/passwordChildLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/buttonForgot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/tViewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:labelFor="@id/tEditPasswordL"
                android:padding="10dp"
                android:text="@string/Password" />

            <EditText
                android:id="@+id/tEditPasswordL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgotPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordChildLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonLoginL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPasswordL"
        app:layout_constraintWidth_percent="80" />

    <Button
        android:id="@+id/buttonRegisterL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginL" />

</androidx.constraintlayout.widget.ConstraintLayout>