<?xml version="1.0" encoding="utf-8"?>

<!-- All views in this activity MUST have an 'R' at the end
 to represent the register activity -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/tViewInstructionsRegisterR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterInstructions"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailLayoutRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/emailLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/layoutNameR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewInstructionsRegisterR">

        <TextView
            android:id="@+id/tViewEmailR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/tEditEmailR"
            android:padding="10dp"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/tEditEmailR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayoutR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayoutRegister">

        <TextView
            android:id="@+id/tViewUsernameR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/tEditNameR"
            android:padding="10dp"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/tEditNameR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="Name"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/passwordLayoutR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNameR"
        app:layout_constraintWidth_percent="80">

        <LinearLayout
            android:id="@+id/passwordChildLayoutR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tViewPasswordR1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:labelFor="@id/tEditPasswordR1"
                android:padding="10dp"
                android:text="@string/Password" />

            <EditText
                android:id="@+id/tEditPasswordR1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordChildLayoutR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tViewPasswordR2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:labelFor="@id/tEditPasswordR1"
                android:padding="10dp"
                android:text="@string/ReEnterPassword" />

            <EditText
                android:id="@+id/tEditPasswordR2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegisterR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayoutR"
        app:layout_constraintWidth_percent="80" />

    <Button
        android:id="@+id/buttonLoginR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExistingUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterR" />

</androidx.constraintlayout.widget.ConstraintLayout>